# checkersLinera

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  RUN_DEMO.md  START_HERE.md  docker-compose.yml  docker-entrypoint.sh  judge.md  start.sh  stop.sh  testnet.sh
contracts/: Cargo.toml  rust-toolchain.toml
contracts/.cargo/: config.toml
contracts/abi/: Cargo.toml
contracts/abi/src/: lib.rs
contracts/checkers/: Cargo.toml
contracts/checkers/src/: contract.rs  service.rs  state.rs
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/operation/: route.ts
frontend/src/components/: CheckersBoard.tsx  ConnectModal.tsx  CreateGameModal.tsx  CreateTournamentModal.tsx  FloatingToolbar.tsx  GameControls.tsx  GameList.tsx  HomeView.tsx  InviteFriendModal.tsx  JoinByCodeModal.tsx  Leaderboard.tsx  MoveHistory.tsx  QueueWaiting.tsx  RatingBadge.tsx  TimeControlGrid.tsx  TimeControlModal.tsx  Timer.tsx  TournamentBracket.tsx  TournamentList.tsx  TournamentLobby.tsx  WalletConnect.tsx
frontend/src/hooks/: useGameSounds.ts
frontend/src/lib/: graphql.ts
frontend/src/store/: game.ts  index.ts  tournament.ts  wallet.ts
frontend/src/types/: game.ts
frontend/src/utils/: elo.ts  sounds.ts
